# stupid-3D-engine

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.org  compile_commands.json  imgui.ini
inc/: #l_level_editor.hpp#  l_application.h  l_application.hpp  l_camera.h  l_camera.hpp  l_common.h  l_common.hpp  l_debug.h  l_debug.hpp  l_entity.hpp  l_entity_system.h  l_event.hpp  l_event_manager.h  l_event_manager.hpp  l_game.h  l_game.hpp  l_input_manager.h  l_input_manager.hpp  l_level_editor.h  l_level_editor.hpp  l_level_editor_camera3d.hpp  l_level_editor_renderer.hpp  l_main_menu.h  l_main_menu.hpp  l_main_menu_renderer.hpp  l_math.h  l_math.hpp  l_mesh.h  l_mesh.hpp  l_model.h  l_model.hpp  l_physics_system.h  l_platform.h  l_platform.hpp  l_render_system.h  l_renderer.hpp  l_resource_manager.h  l_resource_manager.hpp  l_shader.h  l_shader.hpp  (+4 more)
levels/: aa.level  jalamelsalame.level  one.level  one_modified.level  testing.level
res/models/: maze.mtl
res/shaders/: Cursor.frag  Cursor.vert  GridAxisLine.frag  GridAxisLine.vert  LevelEditor_ModelWithTextures.frag  LevelEditor_ModelWithTextures.vert  LevelEditor_ModelWithoutTextures.frag  LevelEditor_ModelWithoutTextures.vert
src/: #l_camera3d.cpp#  l_application.cpp  l_camera.cpp  l_entity_system.cpp  l_event_manager.cpp  l_game.cpp  l_input_manager.cpp  l_level_editor.cpp  l_level_editor_camera3d.cpp  l_level_editor_renderer.cpp  l_main.cpp  l_main_menu.cpp  l_main_menu_renderer.cpp  l_math.cpp  l_mesh.cpp  l_model.cpp  l_physics_system.cpp  l_render_system.cpp  l_renderer.cpp  l_resource_manager.cpp  l_transform_system.cpp
test/: test_entity_system_reuse_ids.cpp
